feat_ragflow_phase3: ragflow api added. Refactor code structure and remove redundant sections for improved readability and maintainability
