# proto/gen/api/v1/ragflow_service_grpc.pb.go
@@ -1,0 +1,288 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.0
+// - protoc             (unknown)
+// source: api/v1/ragflow_service.proto
+
+package apiv1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	RAGFlowService_GetSyncStatus_FullMethodName         = "/memos.api.v1.RAGFlowService/GetSyncStatus"
+	RAGFlowService_GetSyncStats_FullMethodName          = "/memos.api.v1.RAGFlowService/GetSyncStats"
+	RAGFlowService_TriggerSync_FullMethodName           = "/memos.api.v1.RAGFlowService/TriggerSync"
+	RAGFlowService_SemanticSearch_FullMethodName        = "/memos.api.v1.RAGFlowService/SemanticSearch"
+	RAGFlowService_ListContentSyncStates_FullMethodName = "/memos.api.v1.RAGFlowService/ListContentSyncStates"
+)
+
+// RAGFlowServiceClient is the client API for RAGFlowService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// RAGFlowService 提供 RAGFlow 同步状态查询和管理功能
+type RAGFlowServiceClient interface {
+	// GetSyncStatus 获取 RAGFlow 同步服务状态
+	GetSyncStatus(ctx context.Context, in *GetSyncStatusRequest, opts ...grpc.CallOption) (*SyncStatus, error)
+	// GetSyncStats 获取同步统计信息
+	GetSyncStats(ctx context.Context, in *GetSyncStatsRequest, opts ...grpc.CallOption) (*SyncStats, error)
+	// TriggerSync 手动触发一次同步
+	TriggerSync(ctx context.Context, in *TriggerSyncRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	// SemanticSearch 执行语义检索
+	SemanticSearch(ctx context.Context, in *SemanticSearchRequest, opts ...grpc.CallOption) (*SemanticSearchResponse, error)
+	// ListContentSyncStates 列出内容同步状态
+	ListContentSyncStates(ctx context.Context, in *ListContentSyncStatesRequest, opts ...grpc.CallOption) (*ListContentSyncStatesResponse, error)
+}
+
+type rAGFlowServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewRAGFlowServiceClient(cc grpc.ClientConnInterface) RAGFlowServiceClient {
+	return &rAGFlowServiceClient{cc}
+}
+
+func (c *rAGFlowServiceClient) GetSyncStatus(ctx context.Context, in *GetSyncStatusRequest, opts ...grpc.CallOption) (*SyncStatus, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(SyncStatus)
+	err := c.cc.Invoke(ctx, RAGFlowService_GetSyncStatus_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *rAGFlowServiceClient) GetSyncStats(ctx context.Context, in *GetSyncStatsRequest, opts ...grpc.CallOption) (*SyncStats, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(SyncStats)
+	err := c.cc.Invoke(ctx, RAGFlowService_GetSyncStats_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *rAGFlowServiceClient) TriggerSync(ctx context.Context, in *TriggerSyncRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, RAGFlowService_TriggerSync_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *rAGFlowServiceClient) SemanticSearch(ctx context.Context, in *SemanticSearchRequest, opts ...grpc.CallOption) (*SemanticSearchResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(SemanticSearchResponse)
+	err := c.cc.Invoke(ctx, RAGFlowService_SemanticSearch_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *rAGFlowServiceClient) ListContentSyncStates(ctx context.Context, in *ListContentSyncStatesRequest, opts ...grpc.CallOption) (*ListContentSyncStatesResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListContentSyncStatesResponse)
+	err := c.cc.Invoke(ctx, RAGFlowService_ListContentSyncStates_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// RAGFlowServiceServer is the server API for RAGFlowService service.
+// All implementations must embed UnimplementedRAGFlowServiceServer
+// for forward compatibility.
+//
+// RAGFlowService 提供 RAGFlow 同步状态查询和管理功能
+type RAGFlowServiceServer interface {
+	// GetSyncStatus 获取 RAGFlow 同步服务状态
+	GetSyncStatus(context.Context, *GetSyncStatusRequest) (*SyncStatus, error)
+	// GetSyncStats 获取同步统计信息
+	GetSyncStats(context.Context, *GetSyncStatsRequest) (*SyncStats, error)
+	// TriggerSync 手动触发一次同步
+	TriggerSync(context.Context, *TriggerSyncRequest) (*emptypb.Empty, error)
+	// SemanticSearch 执行语义检索
+	SemanticSearch(context.Context, *SemanticSearchRequest) (*SemanticSearchResponse, error)
+	// ListContentSyncStates 列出内容同步状态
+	ListContentSyncStates(context.Context, *ListContentSyncStatesRequest) (*ListContentSyncStatesResponse, error)
+	mustEmbedUnimplementedRAGFlowServiceServer()
+}
+
+// UnimplementedRAGFlowServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedRAGFlowServiceServer struct{}
+
+func (UnimplementedRAGFlowServiceServer) GetSyncStatus(context.Context, *GetSyncStatusRequest) (*SyncStatus, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetSyncStatus not implemented")
+}
+func (UnimplementedRAGFlowServiceServer) GetSyncStats(context.Context, *GetSyncStatsRequest) (*SyncStats, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetSyncStats not implemented")
+}
+func (UnimplementedRAGFlowServiceServer) TriggerSync(context.Context, *TriggerSyncRequest) (*emptypb.Empty, error) {
+	return nil, status.Error(codes.Unimplemented, "method TriggerSync not implemented")
+}
+func (UnimplementedRAGFlowServiceServer) SemanticSearch(context.Context, *SemanticSearchRequest) (*SemanticSearchResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method SemanticSearch not implemented")
+}
+func (UnimplementedRAGFlowServiceServer) ListContentSyncStates(context.Context, *ListContentSyncStatesRequest) (*ListContentSyncStatesResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListContentSyncStates not implemented")
+}
+func (UnimplementedRAGFlowServiceServer) mustEmbedUnimplementedRAGFlowServiceServer() {}
+func (UnimplementedRAGFlowServiceServer) testEmbeddedByValue()                        {}
+
+// UnsafeRAGFlowServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to RAGFlowServiceServer will
+// result in compilation errors.
+type UnsafeRAGFlowServiceServer interface {
+	mustEmbedUnimplementedRAGFlowServiceServer()
+}
+
+func RegisterRAGFlowServiceServer(s grpc.ServiceRegistrar, srv RAGFlowServiceServer) {
+	// If the following call panics, it indicates UnimplementedRAGFlowServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&RAGFlowService_ServiceDesc, srv)
+}
+
+func _RAGFlowService_GetSyncStatus_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetSyncStatusRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RAGFlowServiceServer).GetSyncStatus(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RAGFlowService_GetSyncStatus_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RAGFlowServiceServer).GetSyncStatus(ctx, req.(*GetSyncStatusRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _RAGFlowService_GetSyncStats_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetSyncStatsRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RAGFlowServiceServer).GetSyncStats(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RAGFlowService_GetSyncStats_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RAGFlowServiceServer).GetSyncStats(ctx, req.(*GetSyncStatsRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _RAGFlowService_TriggerSync_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(TriggerSyncRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RAGFlowServiceServer).TriggerSync(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RAGFlowService_TriggerSync_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RAGFlowServiceServer).TriggerSync(ctx, req.(*TriggerSyncRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _RAGFlowService_SemanticSearch_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(SemanticSearchRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RAGFlowServiceServer).SemanticSearch(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RAGFlowService_SemanticSearch_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RAGFlowServiceServer).SemanticSearch(ctx, req.(*SemanticSearchRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _RAGFlowService_ListContentSyncStates_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListContentSyncStatesRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(RAGFlowServiceServer).ListContentSyncStates(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: RAGFlowService_ListContentSyncStates_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(RAGFlowServiceServer).ListContentSyncStates(ctx, req.(*ListContentSyncStatesRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// RAGFlowService_ServiceDesc is the grpc.ServiceDesc for RAGFlowService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var RAGFlowService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "memos.api.v1.RAGFlowService",
+	HandlerType: (*RAGFlowServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetSyncStatus",
+			Handler:    _RAGFlowService_GetSyncStatus_Handler,
+		},
+		{
+			MethodName: "GetSyncStats",
+			Handler:    _RAGFlowService_GetSyncStats_Handler,
+		},
+		{
+			MethodName: "TriggerSync",
+			Handler:    _RAGFlowService_TriggerSync_Handler,
+		},
+		{
+			MethodName: "SemanticSearch",
+			Handler:    _RAGFlowService_SemanticSearch_Handler,
+		},
+		{
+			MethodName: "ListContentSyncStates",
+			Handler:    _RAGFlowService_ListContentSyncStates_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/ragflow_service.proto",
+}
